# moralizer

./: .gitignore  README.md  pyproject.toml
moralizer/: __init__.py  auxilliary_functions.py  moral_foundations.json  moralizer.py  practice_text.txt
tests/: practice_text.txt  test_moralizer.py
