[tool.poetry]
name = "moralizer"
version = "0.1.0"
description = "> Simple tool to get the Moral Foundations counts of a given text."
authors = ["Your Name <npmontgomery@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/sdispater/poetry"
documentation = "https://poetry.eustace.io/docs"

keywords = ["nlp", "sentiment", "spacy", "moral foundations"]

classifiers = [
    "Topic :: natural-langauge-processing :: sentiment-analysis :: moral-foundations"
]

[tool.poetry.dependencies]
python = "^3.6"
spacy = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
