[tool.poetry]
name = "moralizer"
version = "0.1.2"
description = "> Simple tool to get the Moral Foundations counts of a given text."
authors = ["npm"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/npmontgomery/moralizer"
documentation = "https://github.com/npmontgomery/moralizer"

keywords = ["nlp", "sentiment", "spacy", "moral foundations"]

classifiers = [
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.6"
spacy = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
